--- a/TP5_fiasco/index.html
+++ b/TP5_fiasco/index.html
@@ -4,8 +4,184 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <div class="container">
+    <header>
+        <div class="make">
+        <p class="logo">THE FIASCO</p>
+        
+            <ul>
+                <li>
+                    <a href="">ABOUT FIASCO'S</a>
+                </li>
+                <li>
+                    <a href="">MENU</a>
+                </li>
+                <li>
+                    <a href="">RECIPES</a>
+                </li>
+                <li>
+                    <a href="">CONTACT</a>
+                </li>
+                <li>
+                    <a href="">MAKE RESERVATION</a>
+                </li>
+            </ul>
+        </div>
+        <div class="welcome">
+           <h3 class="amarelo">Welcome</h3>
+           <h1>THE FIASCO</h1>
+           <div>
+          <p>MEDITERRANEAN SPECIALITIES</p>
+        </div>
+        </div>
+    </header>
+    <section class="container1">
+    <section  class="discover">
+        <div >
+             <img src="img/burger.jpg" alt="burger">
+        </div>
+         <div>
+              <h3 class="amarelo">Discover</h3>
+            <h2 class="branco">OUR GASTRONOMY</h2>
+
+        <p class="branco">Attending a trade show can be a very effective method of<br> 
+            promoting your company and its products. And one of the most<br>
+            effective ways to optimize your trade show display and<br>
+            increase traffic to your booth is through the use of banner<br>
+            stands.</p>
+
+            <ul>
+                <li>
+                    <a class="amarelo" href="">See more ...></a>
+                </li>
+            </ul>
+         </div>
+    </section>
+    <section class="discover">
+        <div>
+            <h3 class="amarelo" >Tasteful</h3>
+            <h2 class="branco">RECIPES MADE WITH LOVE</h2>
+
+        <p class="branco">Classified advertising is a form of advertising that is<br> 
+            particularly common in newspapers and the other periodicals.<br>
+            A classified is usually textually based and consist of as<br>
+            little as the type of item being sold, and a contact number to<br>
+            call for more information</p>
+
+            <ul>
+                <li>
+                    <a class="amarelo" href="">See more ...></a>
+                </li>
+            </ul>
+        </div>
+         <div>
+            <img src="img/crusted-chicken.jpg" alt="chicken">
+         </div>
+    </section>
+    <section class="menu">
+        <h2 class="amarelo">Menu</h2>
+        <h1 class="branco">CERTIFIED BIO</h1>
+        <p class="branco">Classified advertising is a form of advertising that is particularly common in newspapers and other <br>
+        periodicals. A classified is usually textually based and can consistof as little as type of item being sold, <br>
+    and a contact number to call for more information</p>
+         <div class="branco">
+            <ul>
+                <li>EGGS</li>
+                <li>PORC</li>
+                <li>CHICKEN</li>
+                <li>FISH</li>
+                <li>VEGAN</li>
+            </ul>
+         </div>
+    </section></section>
+    <section class="container2">
+        <div class="discover">
+        <div class="discover">
+            <img src="img/crusted-chicken-square.jpg" alt="chicken">
+            <div>
+                <h3 class="branco">Amazing Crusted Chicken</h3>
+                <p class="branco">Beryl Cook is one of Britain's <br>
+                most talented and amusing <br>
+            artists. Beryl's pictures feature <br>
+        women of all shapes and sizes <br>
+    enjoying themselves</p>
+    <p class="amarelo">$20</p>
+            </div>
+        </div>
+         <div class="discover">
+            <div>
+                <h3 class="branco">BoBun Light Odd</h3>
+                <p class="branco">Beryl Cook is one of Britain's <br>
+                most talented and amusing <br>
+            artists. Beryl's pictures feature <br>
+        women of all shapes and sizes <br>
+    enjoying themselves</p>
+    <p class="amarelo">$20</p>
+            </div>
+            <img src="img/bobun-light-square.jpg" alt="bobun">
+         </div></div>
+         <div class="discover">
+         <div class="discover">
+            <img src="img/poisson-square.jpg" alt="poisson">
+            <div>
+                <h3 class="branco">Amazing Crusted Chicken</h3>
+                <p class="branco">Beryl Cook is one of Britain's <br>
+                most talented and amusing <br>
+            artists. Beryl's pictures feature <br>
+        women of all shapes and sizes <br>
+    enjoying themselves</p>
+    <p class="amarelo">$20</p>
+            </div>
+        </div>
+         <div class="discover">
+            <div>
+                <h3 class="branco">Spicy Egg Paella</h3>
+                <p class="branco">Beryl Cook is one of Britain's <br>
+                most talented and amusing <br>
+            artists. Beryl's pictures feature <br>
+        women of all shapes and sizes <br>
+    enjoying themselves</p>
+    <p class="amarelo">$20</p>
+            </div>
+            <img src="img/paella-square.jpg" alt="paella">
+         </div></div>
+    </section>
+    <section class="container3">
+    <section class="discover">
+        <div>
+            <h3 class="amarelo">Chef</h3>
+            <h2 class="branco">MEET OUR EXECUTIVE CHEF,<br>
+            CHRISTIAN JACOB</h2>
+            <p class="branco">If you are considering purchasing a new grill, or barbecue, you will be faced <br>
+            with a multitude of options to choose between. However, there is one choise <br>
+        which you will neet to make fairly quickly in your quest for the perfect grill <br>
+    for you. That decision is whether to buy a charcoal or gas grill.</p>
+    <p>Wow i have a hankering for some really good grill roasted chicken, the melt in <br>
+    your mouth variety with some fresh homemade salsa slathered right on top.</p>
+    <ul>
+        <li>
+            <a class="amarelo" href="">See the cooks...></a>
+        </li>
+    </ul>
+        </div>
+         <img src="img/chief.jpg" alt="chief">
+    </section></section>
+    <section>
+        <div>
+        </div>
+         <div></div>
+         <div></div>
+    </section>
+    <section>
+        <div>
+        </div>
+         <div></div>
+    </section>
+    </div> 
+    <section></section>
+    <footer></footer>
 </body>
 </html>
