--- a/TP6_consignes/index.html
+++ b/TP6_consignes/index.html
@@ -5,12 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
+        <!-- Primeira Div -->
          <div>
-        <ul>
+        <ul style="list-style: none;">
             <li><a href="">L'EXPOSITION</a></li>
             <li><a href="">INFO PRATIQUES</a></li>
             <li><a href="">FAQ</a></li>
@@ -19,30 +23,34 @@
             <li><a href="">FR|EN</a></li>
             <li><a href="">BILLETTERIE</a></li>
         </ul></div>
+        <!-- Final da primeira div -->
+        <!-- Primeiro LOGO -->
 
-        <div>
+        <div class="dino">
             <img src="./consignes/img/logo.png" alt="logo">
         </div>
+        <!-- Final do primeiro LOGO -->
     </header>
     <main>
-        <div>
-        <h1>REGARDEZ UN DINOSAURE DROIT DANS LES YRUX</h1>
+        <div class="container">
+        <h1 class="lott"> <br><br>  &nbsp;&nbsp;REGARDEZ UN DINOSAURE <br> &nbsp;&nbsp;&nbsp;&nbsp;DROIT DANS LES YEUX !<br></h1>
         <div>
             <img src="./consignes/img/entree.png" alt="entree">
         </div>
-        <p>Jurassic World/L'expositionprolonge l'experience des spectateurs en associant des environnement immersifs à des éléments éducatifs et scientifiques interactifs.</p>
-        <p>Inspiré de l'un des plus grands blockbusters de l'histoire du cinema,cet événement plonge petits et grands dans les scénes inspirées du célébre film. ici, le parc imaginaire prend vie...juste sous vos yeux.</p>
-        <p>Décourvrez Isla Nublar en classe VIP et explosez Jurassic World. Ecarquillez vos yeux devant l'imposant Brachiosaure: discutrez nez à nez avec un Vélociraptor et approchez-vous du plus mauvais de tous, le terrible Tyrannausaure rex.</p>
-        <p>Créée en étroite collaboration avec un pàléontologue renommé, Jack horner,L"exposition est riche en contenu interactifs et éducatif, issus de recherches scentifiques sur L'ADN des dinosaures, autant de découvertes qui on permis a Jurassic World de prendre vie. Quel que soit votre âge, ces créatures préhistoriques incroyables n'auront plus aucun secret pour vous.</p>
+        <p> <br> <strong>Jurassic World / L'exposition</strong> prolonge l'experience des spectateurs en associant des <br> environnement  immersifs à des éléments éducatifs et scientifiques interactifs.</p>
+        <p> <br> Inspiré de l'un des plus grands blockbusters de l'histoire du cinema,cet événement plonge petits et <br> grands dans les scénes inspirées du célébre film. ici, le parc imaginaire prend vie...juste sous vos yeux.</p>
+        <p> <br> Décourvrez Isla Nublar en classe VIP et explosez Jurassic World. Ecarquillez vos yeux devant <br> l'imposant Brachiosaure: discutrez nez à nez avec un Vélociraptor et approchez-vous du plus <br> mauvais de tous, le terrible Tyrannausaure rex.</p>
+        <p> <br> Créée en étroite collaboration avec un pàléontologue renommé, Jack horner,L'exposition est riche <br> en contenu interactifs et éducatif, issus de recherches scentifiques sur L'ADN des dinosaures, <br> autant de découvertes qui on permis a Jurassic World de prendre vie. Quel que soit votre âge, ces <br>
+             créatures préhistoriques incroyables n'auront plus aucun secret pour vous. <br><br></p>
    
-    <div>
-        <p>Jurassic world: Un voyage à couper le souffle!</p>
-        <p>du 14 avril au 2 Septembres 2018</p>
-        <p>à la cité du cinema</p>
-        <p>Paris/saint-Denis</p>
+    <div class="voyage">
+        <h2> <br>Jurassic world: Un voyage à couper le souffle! <br>
+        du 14 avril au 2 Septembres 2018 <br>
+        à la cité du cinema <br>
+        Paris/saint-Denis</h2>
     </div> 
     <div>
-         <p>Réservez vos places dés aujourd'hui</p>
+         <p>  Réservez vos places dés aujourd'hui</p>
         <p>et souvenez-vous...si quelque chose vous poursuit, COUREZ</p>
         <p>!</p> 
     </div>
