--- a/TP6_consignes/index.html
+++ b/TP6_consignes/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,400;1,600&display=swap" rel="stylesheet">
@@ -20,8 +21,10 @@
             <li><a href="">FAQ</a></li>
             <li><a href="">AVIS</a></li>
             <li><a href="">PRESSE</a></li>
-            <li><a href="">FR|EN</a></li>
-            <li><a href="">BILLETTERIE</a></li>
+            <li>
+                <a href="">Fr | <span>En</span></a>
+              </li>
+            <li><a href="#" class="bot"><i class="fa-sharp fa-solid fa-ticket"></i> BILLETTERIE</a></li>
         </ul></div>
         <!-- Final da primeira div -->
         <!-- Primeiro LOGO -->
@@ -35,76 +38,94 @@
         <div class="container">
         <h1 class="lott"> <br><br>  &nbsp;&nbsp;REGARDEZ UN DINOSAURE <br> &nbsp;&nbsp;&nbsp;&nbsp;DROIT DANS LES YEUX !<br></h1>
         <div>
-            <img src="./consignes/img/entree.png" alt="entree">
+            <img src="./consignes/img/entree.png" alt="entree" width="800">
         </div>
-        <p> <br> <strong>Jurassic World / L'exposition</strong> prolonge l'experience des spectateurs en associant des <br> environnement  immersifs à des éléments éducatifs et scientifiques interactifs.</p>
-        <p> <br> Inspiré de l'un des plus grands blockbusters de l'histoire du cinema,cet événement plonge petits et <br> grands dans les scénes inspirées du célébre film. ici, le parc imaginaire prend vie...juste sous vos yeux.</p>
-        <p> <br> Décourvrez Isla Nublar en classe VIP et explosez Jurassic World. Ecarquillez vos yeux devant <br> l'imposant Brachiosaure: discutrez nez à nez avec un Vélociraptor et approchez-vous du plus <br> mauvais de tous, le terrible Tyrannausaure rex.</p>
-        <p> <br> Créée en étroite collaboration avec un pàléontologue renommé, Jack horner,L'exposition est riche <br> en contenu interactifs et éducatif, issus de recherches scentifiques sur L'ADN des dinosaures, <br> autant de découvertes qui on permis a Jurassic World de prendre vie. Quel que soit votre âge, ces <br>
+        <div class="jura">
+        <p> <br> <strong>Jurassic World / L'exposition</strong> prolonge l'experience des spectateurs en associant des <br> 
+            environnement  immersifs à des éléments éducatifs et scientifiques interactifs.</p>
+        <p> <br> Inspiré de l'un des plus grands blockbusters de l'histoire du cinema,cet événement plonge petits et <br> 
+            grands dans les scénes inspirées du célébre film. ici, le parc imaginaire prend vie...juste sous vos yeux.</p>
+        <p> <br> Décourvrez Isla Nublar en classe VIP et explosez <strong>Jurassic World</strong> . 
+            Ecarquillez vos yeux devant <br> l'imposant Brachiosaure: discutrez nez à nez avec un Vélociraptor et 
+            approchez-vous du plus <br> mauvais de tous, le terrible Tyrannausaure rex.</p>
+        <p> <br> Créée en étroite collaboration avec un pàléontologue renommé, Jack horner,L'exposition est riche <br> 
+            en contenu interactifs et éducatif, issus de recherches scentifiques sur L'ADN des dinosaures, <br>
+             autant de découvertes qui on permis a <strong>Jurassic World</strong>  de prendre vie. Quel que soit votre âge, ces <br>
              créatures préhistoriques incroyables n'auront plus aucun secret pour vous. <br><br></p>
-   
+        </div>
     <div class="voyage">
-        <h2> <br>Jurassic world: Un voyage à couper le souffle! <br>
+        <p> <br>Jurassic world: Un voyage à couper le souffle! <br>
         du 14 avril au 2 Septembres 2018 <br>
         à la cité du cinema <br>
-        Paris/saint-Denis</h2>
+        Paris/saint-Denis</p>
     </div> 
-    <div>
-         <p>  Réservez vos places dés aujourd'hui</p>
-        <p>et souvenez-vous...si quelque chose vous poursuit, COUREZ</p>
-        <p>!</p> 
+    <div class="voyage">
+         <p> <br> Réservez vos places dés aujourd'hui <br>
+        et souvenez-vous...si quelque chose vous poursuit, <strong>COUREZ
+        <br> ! </strong></p>
     </div>
-    <div>
-        <p>RESERVER</p>
+    <div class="botto">
+       <a href="#" class="bottom">RESERVER</a>
     </div>
     </div>
     </main>
 
-    <div>
-        <div>
-            <div>
-            <h3>TARIFS</h3>
-       TARIF
-<p> Adultes: 19.90€</p>
-<p>Enfant (-de 11ans): 15.90€</p>
-<p>Famille (2 adultes + 2 enfants): 64.90€</p>
-<p>Audioguides: 5€</p>
+    
+        <div class="container1">
+            <div class="tari">
+                <div class="tar">
+            <h2> <i class="fa-regular fa-credit-card"></i> TARIFS</h2> <br>
+<p> Adultes : <strong>19.90€</strong></p>
+<p>Enfant (-de 11ans) : <strong>15.90€</strong></p>
+<p>Famille (2 adultes + 2 enfants) : <strong>64.90€</strong></p>
+<p>Audioguides : <strong>5€</strong></p><br>
 <p>Posibilité de reserver un billet coupe fils prioritaire
-par tranches horraire de 30 min</p>
-<div>
-   <p>ACHETER EN LIGNE</p> 
+par tranches <br> horraire de 30 min</p>
+<div class="bottoo">
+<a href="#" class="bottom">ACHETER EN LIGNE</a>
+</div></div>
+<div class="veni">
+   <h2> <i class="fa-solid fa-bus"></i> COMMENT VENIR?</h2> <br>
+<strong>Cité du cinéma</strong> <br>
+20 Rue Ampère <br>
+93200 Saint-Denis <br><br> 
+<strong>En Métro : </strong> <img src="./consignes/img/logo-metro_m13.png" alt="metro" width="40" height="20"> (carrefour Pleyel) <br>
+<strong>En Bus : </strong> Ligne 139 (carrefour Pleyel) <br>
+<strong>En Voiture : </strong>VIA L4AUTOROUTE A1 'sortie 2 vers Saint-Denis/La <br> plaine/Saint-Denis-Centre) ou via l'autoroute A86 (sortie 8a vers Saint Ouen/Paris-Porte de Clignancourt/Saint-Denis-Pleyel) 
 </div>
         </div>
-        <div>
-           <h3>HORAIRES</h3>
+        <div class="hor"><div>
+            <hr size="" width="450"> <br><br>
+           <h2> <i class="fa-regular fa-clock"></i> HORAIRES</h2> <br>
 <p> Tous les jours 7j/7</p>
-<p>10h00 - 19h00</p>
-<p>Derniére entrée: 18h00</p>
-            <div>
-
+<strong><p>10h00 - 19h00</p></strong>
+<p>Derniére entrée: 18h00</p></div>
+            <div class="mapa">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d42057.82515694406!2d2.3600836769082347!3d48.789257645750645!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e67391408a8a
+                49%3A0xdc5c38e751a6eafa!2zOTQ0MDAg0JLQuNGC0YDQuC3RgdGO0YAt0KHQtdC9!5e0!3m2!1sru!2sfr!4v1687699032880!5m2!1sru!2sfr" width="300" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
-        <div>
-            <h1>PARTENAIRES</h1>
-            <div>
-                <img src="./consignes/img/tf1.png" alt="tf1">
-                <img src="./consignes/img/bfm.png" alt="bfm">
-                <img src="./consignes/img/jdd.png" alt="jdd">
-                <img src="./consignes/img/rtl.png" alt="rtl">
+        <div class="parte">
+           <h1>PARTENAIRES</h1> <br><br><br>
+            <div class="ico">
+                <div class="icoo"><img src="./consignes/img/tf1.png" alt="tf1"></div>
+                <div class="icooo"><img src="./consignes/img/bfm.png" alt="bfm"></div>
+                   <div class="icoooo"><img src="./consignes/img/jdd.png" alt="jdd"></div>
+                 <div class="icooooo"><img src="./consignes/img/rtl.png" alt="rtl"></div>
             </div>
         </div>
     </div>
 <footer>
-    <div>
+    <div class="foot">
         <ul>
-            <li><a href="">Mentions légales</a></li>
-            <li><a href="">Conditions Générales d'Utilization</a></li>
-            <li><a href="">Politique de confidentialité</a></li>
-            <li><a href="">Cookies</a></li>
+            <li><a href="">Mentions légales</a></li> <br>
+            <li><a href="">Conditions Générales d'Utilization</a></li><br>
+            <li><a href="">Politique de confidentialité</a></li><br>
+            <li><a href="">Cookies</a></li><br>
             <li><a href="">Contact</a></li>
         </ul>
-
-        <img src="./consignes/img/logo2.png" alt="logo2">
+        <div class="dinii">
+        <img src="./consignes/img/logo2.png" alt="logo2" width="260" height="200"></div>
     </div>
 </footer>
     
